styles.css
* {
  box-sizing: border-box;
}

html,
body {
  padding: 0;
  margin: 0;
}

html {
  --text-color: white;
  --text-shadow-color: #801792;
  --sketch-bg-color: #ccc;
  --button-bg-color: #3b0d42;
  --button-hover-color: black;
  --container-gap-size: 20px;
  --sidebar-gap-size: 10px;
}

body {
  background: linear-gradient(135deg, #000000 , #620e70);
  background-repeat: no-repeat;
  background-attachment: fixed;
  color: var(--text-color);
  text-shadow: 0 0 5px var(--text-shadow-color);
  text-align: center;
  cursor: default;
}

.container {
  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  gap: var(--container-gap-size);
  min-width: 300px;
  max-width: 1000px;
  margin:  0 auto 20px auto;
}

/* sidebar */

.sidebar {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  align-items: center;
  gap: var(--sidebar-gap-size);
}

.sidebar button {
  padding: 10px 10px;
  color: inherit;
  background-color: var(--button-bg-color);
  box-shadow: 0 0 5px black;
  border: 1px solid var(--button-bg-color);
  border-radius: 10px;
  cursor: pointer;
}

.sidebar button:hover,
.sidebar .selected {
  background-color: var(--button-hover-color);
  border: 1px solid var(--button-hover-color);
  text-shadow: 0 0 5px var(--text-shadow-color);
  box-shadow: 0px 0px 5px var(--text-color);
}

input[type="color"] {
  width: 70px;
  height: 70px;
  padding: 0;
  background-color: black;
  box-shadow: 0 0 5px var(--sketch-bg-color);
  border: none;
  border-radius: 50%; 
  cursor: pointer;
}

input[type="color"]:hover {
  box-shadow: 0px 0px 5px var(--text-color);
}

/* -webkit */
input[type="color"]::-webkit-color-swatch-wrapper {
  padding: 0;
}

input[type="color"]::-webkit-color-swatch {
  border: none;  
  border-radius: 50%;
}

/* firefox */
input[type="color"]::-moz-focus-inner {
  border: none;
  border-radius: 50%;
  padding: 0;
}

input[type="color"]::-moz-color-swatch {
  border: none;
  border-radius: 50%;
}

.range-wrapper {
  width: 100%;
}

input[type="range"] {
  margin-top: var(--sidebar-gap-size);
}

/* sketch */

.sketch {
  background-color: var(--sketch-bg-color);
  width: 300px;
  height: 300px;
  border: 1px solid black;
  border-radius: 10px;
  box-shadow: 0px 0px 5px black;
  display: grid;
  touch-action: none;
}

.sketch div {
  background-color: inherit;
}

/* @media */

@media screen and (min-width: 420px) {
  .sketch {
    width: 400px;
    height: 400px;
  }
}

@media screen and (min-width: 768px) {
  .container {
    flex-direction: row;
    justify-content: center;
    gap: calc(var(--container-gap-size) * 3);
  }

  .sidebar {
    flex-direction: column;
    gap: calc(var(--sidebar-gap-size) * 1.5);
  }

  .sidebar button {
    width: 100%;
  }

  .sketch {
    width: 500px;
    height: 500px;
  }
}

